Le damos estilos al template de envio correcto

--- a/templates/formEnviado.html
+++ b/templates/formEnviado.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{
+            background-color: rgb(61, 170, 61);
+        }
+
+        h1{
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            margin: 0, auto;
+            font-size: 5rem;
+            margin-top: 20rem;
+        }
+    </style>
 </head>
 <body>
     <h1>Formulario Enviado Correctamente</h1>
