--- a/styles/style.css
+++ b/styles/style.css
@@ -47,3 +47,43 @@ body{
     align-items: center;
     height: 100%;
 }
+
+h1{
+    color: white;
+    font-size: var(--h1-font-size);
+    padding-top: 10rem;
+}
+
+span{
+    color: white;
+    font-size: var(--span-font-size);
+    padding-top: 10rem;
+}  
+
+h2{
+    color: var(--h2-color);
+    font-size: var(--h2-font-size);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding-top: 3rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 25rem;
+    margin: 0 auto;
+}
+
+.form-container {
+    max-width: 25rem;
+    margin: 0 auto;
+    border: 0.125rem solid #040404;
+    padding: 1.25rem;
+    border-radius: 0.625rem;
+    margin-top: 1.25rem;
+    background-color: rgb(112, 89, 55);
+    margin-bottom: 2rem;
+}
