--- a/styles/style.css
+++ b/styles/style.css
@@ -51,13 +51,13 @@ body{
 h1{
     color: white;
     font-size: var(--h1-font-size);
-    padding-top: 10rem;
+    padding-top: 15rem;
 }
 
 span{
     color: white;
     font-size: var(--span-font-size);
-    padding-top: 10rem;
+    padding-top: 15rem;
 }  
 
 h2{
@@ -66,7 +66,7 @@ h2{
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding-top: 3rem;
+    padding-top: 1rem;
 }
 
 form {
@@ -102,6 +102,7 @@ form {
     padding: 0.5rem 1rem;
     cursor: pointer;
     border: none;
+    border-radius: 0.2rem;
 }
 
 .btn:hover {
