--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,11 @@ span{
     padding-top: 15rem;
 }  
 
+p{
+    color: #ffffff;
+    padding-bottom: 1rem;
+}
+
 h2{
     color: var(--h2-color);
     font-size: var(--h2-font-size);
@@ -86,6 +91,7 @@ form {
     margin-top: 1.25rem;
     background-color: rgb(112, 89, 55);
     margin-bottom: 2rem;
+    box-shadow: 0.1rem 0.1rem 0.1rem 0.1rem;
 }
 
 .name, .email, .message {
